Mobile screen width spacing overflow issue fixing

--- a/assets/scss/foundation/_common.scss
+++ b/assets/scss/foundation/_common.scss
@@ -11,6 +11,11 @@ html, .v-application {
   font-family: 'メイリオ', 'Meiryo', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif !important;
 }
 
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-size: 14px;
   overflow-x: hidden;
